--- a/cv/transform_cpp/Makefile
+++ b/cv/transform_cpp/Makefile
@@ -6,16 +6,14 @@ CC := g++ -std=c++11 -O3
 DEFINES :=
 #DEFINES := -DMY_VIS_MODE
 
-#CC_FLAG := -I/export/home/peiming/book_project_final/book_project/opencv2.4.13_install.debug/include
 CC_FLAG :=-I/export/opencv320/include \
-		-I/usr/local/include -I/export/home/wjh/cuda-7.5/include/ -I/usr/include/ \
-		-I/export/home/wjh/caffe-ssd/include/ \
-		-I/export/home/wjh/caffe-ssd/build/src/ \
+		-I/usr/local/include -I/export/home/xxx/cuda-7.5/include/ -I/usr/include/ \
+		-I/export/home/xxx/caffe-ssd/include/ \
+		-I/export/home/xxx/caffe-ssd/build/src/ \
 		-I./include
 
 CC_FLAG += $(DEFINES)
 
-#LD_FLAG := -L/export/home/peiming/book_project_final/book_project/opencv2.4.13_install.debug/lib/
 LD_FLAG :=-L/export/opencv320/lib/ \
 		-L/usr/lib64/ \
 		-lopencv_core \
@@ -35,10 +33,10 @@ LD_FLAG += -L/usr/lib64/ \
 		-lboost_system \
 		-lgflags
 
-LD_FLAG += -L/export/home/wjh/caffe-ssd/build/lib/ \
+LD_FLAG += -L/export/home/xxx/caffe-ssd/build/lib/ \
 		-lcaffe
 
-$(EXE): obj/utils.o obj/detector.o obj/heat.o
+$(EXE): obj/utils.o obj/detector.o obj/perspective.o obj/main.o
 	$(CC) $(LD_FLAG) $^ -o $@
 
 
@@ -48,13 +46,11 @@ obj/utils.o : src/utils.cpp
 obj/detector.o : src/detector.cpp
 	$(CC) $(CC_FLAG) -c $^ -o $@
 
-#obj/extractor.o : src/extractor.cpp
-#	$(CC) $(CC_FLAG) -c $^ -o $@
 
-#obj/tracker.o : src/tracker.cpp include/tracker.h
-#	$(CC) $(CC_FLAG) -c $< -o $@
+obj/perspective.o : src/perspective.cpp
+	$(CC) $(CC_FLAG) -c $^ -o $@
 
-obj/heat.o : src/heat.cpp
+obj/main.o : src/main.cpp
 	$(CC) $(CC_FLAG) -c $^ -o $@
 
 clean:
