--- a/workspace_config/tmux.conf
+++ b/workspace_config/tmux.conf
@@ -1,3 +1,6 @@
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
 set -g prefix C-a
 unbind C-b
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
